<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/note_title"
        android:textSize="40dp" />
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/name_label"
	    android:textSize="20dp"
	    />
	<EditText
	    android:id="@+id/text_noteName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text" >
	    <requestFocus />
    </EditText>
	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/description_label"
	    android:textSize="20dp"
	    />

	<EditText
	    android:id="@+id/text_noteDescription"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.33"
	    android:inputType="textMultiLine" >

    </EditText>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <Button            
            android:id="@+id/btn_noteSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_label"
             />
        <Button
            android:id="@+id/btn_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notes_label" />
    </LinearLayout>
    
</LinearLayout>